# tngcoin

./: CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libtngcconsensus.pc  libtngcconsensus.pc.in  libtrustnetworkglobalcoinconsensus.pc  libtrustnetworkglobalcoinconsensus.pc.in
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  tngc.sln  tngc_config.h  trustnetworkglobalcoin.sln  trustnetworkglobalcoin_config.h  vcpkg.json
ci/: test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  tngc-cli.bash-completion  tngc-qt.pro  tngc-tx.bash-completion  tngcd.bash-completion  trustnetworkglobalcoin-cli.bash-completion  trustnetworkglobalcoin-qt.pro  trustnetworkglobalcoin-tx.bash-completion  trustnetworkglobalcoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  tor.md  (+10 more)
doc/man/: Makefile.am  tngc-cli.1  tngc-qt.1  tngc-tx.1  tngc-wallet.1  tngcd.1  trustnetworkglobalcoin-cli.1  trustnetworkglobalcoin-qt.1  trustnetworkglobalcoin-tx.1  trustnetworkglobalcoin-wallet.1  trustnetworkglobalcoind.1
(+1642 files in other folders)
