dist_man1_MANS=

if BUILD_TRUSTNETWORKGLOBALCOIND
  dist_man1_MANS+=trustnetworkglobalcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=trustnetworkglobalcoin-qt.1
endif

if BUILD_TRUSTNETWORKGLOBALCOIN_CLI
  dist_man1_MANS+=trustnetworkglobalcoin-cli.1
endif

if BUILD_TRUSTNETWORKGLOBALCOIN_TX
  dist_man1_MANS+=trustnetworkglobalcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_TRUSTNETWORKGLOBALCOIN_WALLET
  dist_man1_MANS+=trustnetworkglobalcoin-wallet.1
endif
endif
