dist_man1_MANS=

if BUILD_TNGCD
  dist_man1_MANS+=tngcd.1
endif

if ENABLE_QT
  dist_man1_MANS+=tngc-qt.1
endif

if BUILD_TNGC_CLI
  dist_man1_MANS+=tngc-cli.1
endif

if BUILD_TNGC_TX
  dist_man1_MANS+=tngc-tx.1
endif

if ENABLE_WALLET
if BUILD_TNGC_WALLET
  dist_man1_MANS+=tngc-wallet.1
endif
endif
